--- a/views/tvshows/show.hbs
+++ b/views/tvshows/show.hbs
@@ -1,12 +1,12 @@
 <div class="row">
     <div class="col s12 m8">
-        <h3>{{story.title}}
+        <h3>{{tvshow.title}}
             <small>{{{editIcon tvshow.user user tvshow._id false}}}</small>
         </h3>
         <div class="card story">
             <div class="card-content">
                 <span class="card-title">{{formatDate date 'MMMM Do YYYY, h:mm:ss a'}}</span>
-                {{{story.body}}}
+                {{{tvshow.body}}}
             </div>
         </div>
     </div>
