--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,3 +7,45 @@ p{
     margin-top: 50px;
     text-align: center;
 }
+
+section {
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    padding: 0.5rem;
+    background-color: #eee;
+}
+
+.hero {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 50px 5%;
+    /* background-color: #fff; */
+    margin-top: 20px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    max-width: 1200px;
+    margin: 20px auto;
+    border-radius: 10px;
+}
+
+
+.hero-text p {
+    font-size: 18px;
+    /* color:  */
+    margin-bottom: 15px;
+}
+
+.hero-text .join-now-btn {
+    background-color: #314dd6;
+    color: #fff;
+    border: none;
+    padding: 12px 25px;
+    font-size: 18px;
+    cursor: pointer;
+    border-radius: 5px;
+    transition: background-color 0.3s, transform 0.3s;
+}
+
+.hero-text .join-now-btn:hover{
+    background-color: #030c39;
+    transform: scale(1.05);
+}
